<resources>   
    <string name="app_name">Andy练习</string>
    <string name="today_review">当日复习</string>
    <string name="yesterday_new">昨日新学</string>
    <string name="today_new">今日新学</string>
    <string name="tomorrow_review">明日复习</string>
    <string name="other_thing">其它</string>
    <string name="add">添加</string>
    <string name="noinfor">没有获取到数据</string>
    <string name="addsucess">添加数据成功</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>    
    <string name ="addlesson">添加课程</string>
    <string name ="confirmcheck">你确定要把课程标记为已复习么？</string>
    <string name ="confirmdelete">你确定要删除这条记录么？</string>
    <string name ="memcarve">修改记忆曲线</string>
    <string name="modifysucess">修改成功</string>
    <string name="modifyfail">格式错误：1,3,5,7....</string>
    <string name="start_date">开始日期</string>
    <string name="last_date">上次日期</string>
    <string name="lesson_content">课程内容</string>
    <string name="finished">已完成</string>
    
    
    
    
    
    
    <string name="err_num">错误数：</string>
    <string name="right_num">正确数：</string>
    <string name="left_time">剩余时间:</string>
    <string name="view_error">查看错题</string>
    <string name="time_mode">计时模式</string>
    <string name="count_mode">计题模式</string>
    <string name="setting">设置</string>
    <string name="start">开始</string>
    <color name="blue">#0080ff</color>
    <string name="timeset">设置时间</string>
    <string name="countset">设置题数</string>

    
</resources>
