<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btTodayRv" 
            android:visibility="gone">
        </ListView>

        <Button
            android:id="@+id/btTodayNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="@string/today_new" />

        <Button
            android:id="@+id/btOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/listView1"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btTomorrowRv"
            android:textSize="17sp"
            android:text="@string/other_thing" />

        <Button
            android:id="@+id/btYstdNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/listView1"
            android:layout_toRightOf="@+id/btTodayRv"
                        android:textSize="17sp"
            android:text="@string/yesterday_new" />

        <Button
            android:id="@+id/btTomorrowRv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btYstdNew"
                        android:textSize="17sp"
            android:text="@string/tomorrow_review" />

        <Button
            android:id="@+id/btTodayRv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="17sp"
            android:text="@string/today_review" />


        <Button
            android:id="@+id/btSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btTodayNew"
            android:layout_toRightOf="@+id/btTodayNew"
            android:text="@string/add" 
            />

    </RelativeLayout>

</FrameLayout>